--- a/mysql-pvc.yaml
+++ b/mysql-pvc.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim
+  name: mysql-pvc
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: hostpath
   resources:
     requests:
-      storage: 1Gi
+      storage: 10Gi
